rename to entity
