# openapi.json
@@ -1663,18 +1663,18 @@
         }
       }
     },
-    "/autocomplete/{name}": {
+    "/autocomplete/{entity}": {
       "get": {
         "summary": "Autocomplete Search",
         "operationId": "autocompleteSearch",
         "parameters": [
           {
-            "name": "name",
+            "name": "entity",
             "in": "path",
             "required": true,
             "schema": {
               "type": "string",
-              "title": "Name"
+              "title": "Entity"
             }
           },
           {
@@ -1769,18 +1769,18 @@
         }
       }
     },
-    "/autocomplete/{name}/{id}": {
+    "/autocomplete/{entity}/{id}": {
       "get": {
         "summary": "Autocomplete Single",
         "operationId": "autocompleteSingle",
         "parameters": [
           {
-            "name": "name",
+            "name": "entity",
             "in": "path",
             "required": true,
             "schema": {
               "type": "string",
-              "title": "Name"
+              "title": "Entity"
             }
           },
           {
@@ -1862,7 +1862,10 @@
           }
         },
         "type": "object",
-        "required": ["id", "label"],
+        "required": [
+          "id",
+          "label"
+        ],
         "title": "AutocompleteEntry"
       },
       "CategoryPattern": {
@@ -1936,7 +1939,11 @@
           }
         },
         "type": "object",
-        "required": ["id", "firstName", "lastName"],
+        "required": [
+          "id",
+          "firstName",
+          "lastName"
+        ],
         "title": "Person"
       },
       "ProblemDetails": {
@@ -1966,7 +1973,11 @@
           }
         },
         "type": "object",
-        "required": ["title", "status", "detail"],
+        "required": [
+          "title",
+          "status",
+          "detail"
+        ],
         "title": "ProblemDetails"
       },
       "SearchResponse_CategoryPattern_": {
@@ -1984,7 +1995,10 @@
           }
         },
         "type": "object",
-        "required": ["total", "result"],
+        "required": [
+          "total",
+          "result"
+        ],
         "title": "SearchResponse[CategoryPattern]"
       },
       "SearchResponse_Person_": {
@@ -2002,7 +2016,10 @@
           }
         },
         "type": "object",
-        "required": ["total", "result"],
+        "required": [
+          "total",
+          "result"
+        ],
         "title": "SearchResponse[Person]"
       },
       "SearchResponse_TransactionCategory_": {
@@ -2020,7 +2037,10 @@
           }
         },
         "type": "object",
-        "required": ["total", "result"],
+        "required": [
+          "total",
+          "result"
+        ],
         "title": "SearchResponse[TransactionCategory]"
       },
       "SearchResponse_TransactionSource_": {
@@ -2038,7 +2058,10 @@
           }
         },
         "type": "object",
-        "required": ["total", "result"],
+        "required": [
+          "total",
+          "result"
+        ],
         "title": "SearchResponse[TransactionSource]"
       },
       "SearchResponse_Transaction_": {
@@ -2056,7 +2079,10 @@
           }
         },
         "type": "object",
-        "required": ["total", "result"],
+        "required": [
+          "total",
+          "result"
+        ],
         "title": "SearchResponse[Transaction]"
       },
       "Transaction": {
@@ -2132,7 +2158,11 @@
           }
         },
         "type": "object",
-        "required": ["id", "name", "description"],
+        "required": [
+          "id",
+          "name",
+          "description"
+        ],
         "title": "TransactionCategory"
       },
       "TransactionSource": {
@@ -2155,7 +2185,12 @@
           }
         },
         "type": "object",
-        "required": ["id", "name", "ownerId", "ownerName"],
+        "required": [
+          "id",
+          "name",
+          "ownerId",
+          "ownerName"
+        ],
         "title": "TransactionSource"
       },
       "ValidationError": {
@@ -2191,7 +2226,11 @@
           }
         },
         "type": "object",
-        "required": ["loc", "msg", "type"],
+        "required": [
+          "loc",
+          "msg",
+          "type"
+        ],
         "title": "ValidationError"
       },
       "WriteCategoryPattern": {
@@ -2215,7 +2254,9 @@
           }
         },
         "type": "object",
-        "required": ["pattern"],
+        "required": [
+          "pattern"
+        ],
         "title": "WriteCategoryPattern"
       },
       "WritePerson": {
@@ -2232,7 +2273,10 @@
           }
         },
         "type": "object",
-        "required": ["firstName", "lastName"],
+        "required": [
+          "firstName",
+          "lastName"
+        ],
         "title": "WritePerson"
       },
       "WriteTransactionCategory": {
@@ -2256,7 +2300,9 @@
           }
         },
         "type": "object",
-        "required": ["name"],
+        "required": [
+          "name"
+        ],
         "title": "WriteTransactionCategory"
       },
       "WriteTransactionSource": {
@@ -2273,7 +2319,10 @@
           }
         },
         "type": "object",
-        "required": ["name", "ownerId"],
+        "required": [
+          "name",
+          "ownerId"
+        ],
         "title": "WriteTransactionSource"
       }
     }
